; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsstate.c_js_dostring.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/mujs/extr_jsstate.c_js_dostring.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [6 x i8] c"Error\00", align 1
@.str.1 = private unnamed_addr constant [9 x i8] c"[string]\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @js_dostring(i32* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = call i64 @js_try(i32* %6)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %16

9:                                                ; preds = %2
  %10 = load i32*, i32** %4, align 8
  %11 = load i32*, i32** %4, align 8
  %12 = call i32 @js_trystring(i32* %11, i32 -1, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0))
  %13 = call i32 @js_report(i32* %10, i32 %12)
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @js_pop(i32* %14, i32 1)
  store i32 1, i32* %3, align 4
  br label %28

16:                                               ; preds = %2
  %17 = load i32*, i32** %4, align 8
  %18 = load i8*, i8** %5, align 8
  %19 = call i32 @js_loadstring(i32* %17, i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), i8* %18)
  %20 = load i32*, i32** %4, align 8
  %21 = call i32 @js_pushundefined(i32* %20)
  %22 = load i32*, i32** %4, align 8
  %23 = call i32 @js_call(i32* %22, i32 0)
  %24 = load i32*, i32** %4, align 8
  %25 = call i32 @js_pop(i32* %24, i32 1)
  %26 = load i32*, i32** %4, align 8
  %27 = call i32 @js_endtry(i32* %26)
  store i32 0, i32* %3, align 4
  br label %28

28:                                               ; preds = %16, %9
  %29 = load i32, i32* %3, align 4
  ret i32 %29
}

declare dso_local i64 @js_try(i32*) #1

declare dso_local i32 @js_report(i32*, i32) #1

declare dso_local i32 @js_trystring(i32*, i32, i8*) #1

declare dso_local i32 @js_pop(i32*, i32) #1

declare dso_local i32 @js_loadstring(i32*, i8*, i8*) #1

declare dso_local i32 @js_pushundefined(i32*) #1

declare dso_local i32 @js_call(i32*, i32) #1

declare dso_local i32 @js_endtry(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
